# base-cortexm

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README  README.md
cmake/mcu/: stm32f4xx.cmake
cmake/mcu/families/: stm32f469.cmake
cmake/toolchains/: arm-clang.cmake  arm-clangv2.cmake  arm-gcc.cmake
cmake/tools/: code-format.cmake  static-analysis.cmake
lib/STM32CubeF4/Drivers/CMSIS/Device/ST/STM32F4xx/_htmresc/: mini-st_2020.css:Zone.Identifier
lib/cmake/: STM32CubeF4.cmake  cmsis6.cmake
linker/: stm32f469.ld
mcu/: startup_stm32f469xx.s
src/: main.cpp
src/newlib_nano/: init.c
